// SPDX-FileCopyrightText: 2025 Carnegie Mellon University - LivingEdgeLab
//
// SPDX-License-Identifier: GPL-2.0-only

syntax = "proto3";
package steeleagle.protocol.services.flight_log_service;

import "common.proto";

/*
 * Used to log to a flight log
 */
service FlightLog {
  // Basic log endpoint 
  rpc Log (LogRequest) returns (LogResponse) {}
  // Log a request/response proto
  rpc LogProto (LogProtoRequest) returns (LogProtoResponse) {}
}

message LogRequest {
  steeleagle.protocol.common.Request request = 1;
  string topic = 2;
  LogMessage log = 3;
}

message LogResponse {
  steeleagle.protocol.common.Response response = 1;
}

enum LogType {
  INFO = 0;
  DEBUG = 1;
  WARNING = 2;
  ERROR = 3;
}

message LogMessage {
  LogType type = 1;
  string msg = 2;
}

message ReqRepProto {
  oneof type {
    steeleagle.protocol.common.Request request = 1;
    steeleagle.protocol.common.Response response = 2;
  }
  // Name of the request and associated service
  string name = 3;
  // Plaintext representation of the proto contents
  string content = 4;
}

message LogProtoRequest {
  steeleagle.protocol.common.Request request = 1;
  string topic = 2;
  ReqRepProto reqrep_proto = 3; 
}

message LogProtoResponse {
  steeleagle.protocol.common.Response response = 1;
}
